<!-- Copyright 2005-2007 Open Source Applications Foundation Licensed under
	the Apache License, Version 2.0 (the "License"); you may not use this file
	except in compliance with the License. You may obtain a copy of the License
	at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable
	law or agreed to in writing, software distributed under the License is distributed
	on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
	express or implied. See the License for the specific language governing permissions
	and limitations under the License. -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.eccosolutions.osaf.cosmo</groupId>
	<artifactId>cosmo-core-parent</artifactId>
	<version>3.0.0.M1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Cosmo Core Aggregator</name>

	<url>https://github.com/eccosolutions/cosmo-core</url>

	<description>
		A derivation of the back-end parts of cosmo from http://chandlerproject.org.

		The modules here represent the non-web Java code from the cosmo WAR module in
		the original cosmo code.
	</description>

	<modules>
		<module>core</module>
	</modules>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/eccosolutions/cosmo-core</url>
		<connection>scm:git:git@github.com:eccosolutions/cosmo-core.git</connection>
		<developerConnection>scm:git:git@github.com:eccosolutions/cosmo-core.git</developerConnection>
	  <tag>release-3.0.0.M1</tag>
  </scm>

	<dependencyManagement>
	</dependencyManagement>

	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.8.1</version>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.13</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.9.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.13</version>
			</plugin>
		</plugins>
	</reporting>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.0</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<!-- configure the plugins for utf-8 -->
				<!-- http://maven.apache.org/plugins/maven-resources-plugin/examples/encoding.html -->
				<!-- http://maven.apache.org/general.html#special-characters-site -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
					<version>2.4.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>2.2</version>
					<configuration>
						<outputEncoding>UTF-8</outputEncoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.1.2</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<phase>verify</phase>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.13</version>
					<configuration>
						<excludes>
							<exclude>**/*TestCase.java</exclude>
						</excludes>
					</configuration>
				</plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.3.2</version>
                    <configuration>
                        <releaseProfiles>release,central</releaseProfiles>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <tagNameFormat>release-@{project.version}</tagNameFormat>
                    </configuration>
                </plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<distributionManagement>
				<snapshotRepository>
					<id>sonatype-nexus-snapshots</id>
					<name>Sonatype Nexus Snapshots</name>
					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
				</snapshotRepository>
				<repository>
					<id>sonatype-nexus-staging</id>
					<name>Nexus Release Repository</name>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
			</distributionManagement>

			<build>
				<plugins>
					<plugin>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.8.1</version>
						<executions>
							<execution>
								<id>javadoc</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.4</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<developers>
		<developer>
			<id>sprout</id>
			<name>Ted Leung</name>
			<email>twleung@osafoundation.org</email>
			<roles>
				<role>Project Manager</role>
			</roles>
			<organization>OSAF</organization>
			<timezone>-5</timezone>
		</developer>
		<developer>
			<id>bcm</id>
			<name>Brian Moseley</name>
			<roles>
				<role>Server</role>
				<role>Architect</role>
				<role>Components</role>
			</roles>
			<organization>OSAF</organization>
			<timezone>-5</timezone>
		</developer>
		<developer>
			<id>rletness</id>
			<name>Randy Letness</name>
			<roles>
				<role>Server</role>
				<role>Storage Layer</role>
			</roles>
			<organization>OSAF</organization>
			<timezone>-4</timezone>
		</developer>
		<developer>
			<id>mde</id>
			<name>Matthew Eernisse</name>
			<roles>
				<role>Client</role>
				<role>Hub Front-end</role>
			</roles>
			<organization>OSAF</organization>
			<timezone>-4</timezone>
		</developer>
		<developer>
			<id>br</id>
			<name>Bobby Rullo</name>
			<roles>
				<role>Server</role>
				<role>Components</role>
			</roles>
			<organization>OSAF</organization>
			<timezone>-5</timezone>
		</developer>
		<developer>
			<id>tvachon</id>
			<name>Travis Vachon</name>
			<roles>
				<role>Server</role>
				<role>Admin Front-end</role>
			</roles>
			<organization>OSAF</organization>
			<timezone>-5</timezone>
		</developer>
	</developers>

</project>
